feat(metrics): Show capture verion in API response.
